MINECRAFT_HOME and WORLD_DIR are now constants.
Since these 2 are declared as a volume, it doesn't make
sense to have them configurable.